[metadata]
name = mitmstack
summary = Man-In-The-Middle OpenStack Service Faker
author = OpenStack
author-email = zhang.yujunz@zte.com.cn
home-page = https://wiki.openstack.org/wiki/MitmStack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Testing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

[files]
packages =
    mitmstack

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

